--- a/src/components/blogInfo.astro
+++ b/src/components/blogInfo.astro
@@ -3,11 +3,12 @@ import Author from './author.astro';
 
 export interface Props {
   title: string;
+  description: string;
   author: string;
   pubDate: string;
 }
 
-const { title, pubDate } = Astro.props;
+const { title, description, pubDate } = Astro.props;
 ---
 <section>
   <article>
@@ -15,6 +16,7 @@ const { title, pubDate } = Astro.props;
       <header>
         <p>{pubDate}</p>
         <h1>{title}</h1>
+        <p>{description}</p>
         <Author name="CM-IV" />
       </header>
       <slot />
