Added archive feature, re-wrote the post using latex.

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,3 +1,8 @@
+---
+import Config from "../main.config.cjs";
+---
+
 <section class="centered-section">
-    <p><strong>&copy; <em>Occident Software</em></strong>, made with <a href="https://astro.build">Astro.</a></p>
+    <p>{Config.footer}</p>
+    <p>Made with <a href="https://astro.build">Astro.</a></p>
 </section>
