--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from "../layouts/mainLayout.astro";
+import Config from "../main.config.cjs";
 ---
 <html lang="en">
-	<Layout>
+	<Layout pageTitle="Chuck (CMIV)">
 		<div>
-			<h2>Chuck (CMIV)</h2>
 			<p>Software Engineer</p>
 		</div>
 		<hr />
@@ -41,8 +41,8 @@ import Layout from "../layouts/mainLayout.astro";
 		<hr />
 		<strong><p>Links</p></strong>
 		<ul>
-			<li><a href="https://github.com/CM-IV">GitHub Page</a></li>
-			<li><a href="https://discord.gg/erE3jrtpTb">Discord  Server</a></li>
+			<li><a href={`https://github.com/${Config.socialMedia.github}`}>GitHub Page</a></li>
+			<li><a href={`https://discord.gg/${Config.socialMedia.discordServer}`}>Discord  Server</a></li>
 		</ul>
 		<hr />
 	</Layout>
