--- a/src/components/headers.astro
+++ b/src/components/headers.astro
@@ -12,6 +12,8 @@ const { title } = Astro.props;
   <meta name="description" content="Landing Page for Occident Tech Software" />
   <link rel="preload" href="/fonts/jetbrains-mono-v12-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.2/dist/terminal.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
+            integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="https://ik.imagekit.io/xbkhabiqcy9/img/favicon_DuXwGy1V-.png?ik-sdk-version=javascript-1.4.3&updatedAt=1638746946810" />
   <title>{title}</title>
 </head>
