--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -9,7 +9,7 @@ export async function getStaticPaths({ paginate }) {
 
   const allPosts = await Astro.glob('../posts/*.md');
 
-  const sortedPosts = allPosts.filter(f => f.frontmatter.draft != true).sort((a, b) => (b.frontmatter.id) - (a.frontmatter.id));
+  const sortedPosts = allPosts.filter(f => f.frontmatter.draft != true).sort((a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf());
 
   return paginate(sortedPosts, {
 
