--- a/src/pages/archive/[year]/[...page].astro
+++ b/src/pages/archive/[year]/[...page].astro
@@ -17,7 +17,7 @@ export async function getStaticPaths({paginate}) {
   return allYearsUnique.map((year) => {
     const filteredPosts = allPosts
       .filter((post) => new Date(post.frontmatter.pubDate).getFullYear().toString()===year)
-      .sort((a, b) => (b.frontmatter.id) - (a.frontmatter.id));
+      .sort((a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf());
     return paginate(filteredPosts, {
       params: { year }
     });
