Added Education section with email

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Config from "../main.config.cjs";
 		<ul>
 			<li>GitHub Actions</li>
 			<li>CircleCI</li>
-			<li>Woodpecker (A fork of DroneCI)</li>
+			<li>WoodpeckerCI (A fork of DroneCI)</li>
 			<li>Self-hosted Kubernetes K3s workloads using Portainer (Docker)</li>
 		</ul>
 		<hr />
@@ -39,8 +39,14 @@ import Config from "../main.config.cjs";
 			<li><a href="https://adonis-recipe.netlify.app/">Recipe Creation Web App</a> -- Full stack recipe creation web app, Preact and AdonisJS API</li>
 		</ul>
 		<hr />
+		<strong><p>Education</p></strong>
+		<ul>
+			<li><a href={Config.socialMedia.ua_little_rock}>Computer Science, B.S.</a> -- 2022 Undergraduate, UA LittleRock 3.4 GPA</li>
+		</ul>
+		<hr />
 		<strong><p>Links</p></strong>
 		<ul>
+			<li>Business Email: {Config.socialMedia.email}</li>
 			<li><a href={`https://github.com/${Config.socialMedia.github}`}>GitHub Page</a></li>
 			<li><a href={`https://discord.gg/${Config.socialMedia.discordServer}`}>Discord  Server</a></li>
 		</ul>
