--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,5 +4,5 @@ import Config from "../main.config.cjs";
 
 <section class="centered-section">
     <p>{Config.footer}</p>
-    <p>Made with <a href="https://astro.build">Astro.</a></p>
+    <p>Made with <a href="https://astro.build">Astro</a>.</p>
 </section>
