Chore: Fix typo on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Config from "../main.config.cjs";
 		<strong><p>Projects</p></strong>
 		<ul>
 		<li><a href="https://github.com/CM-IV/mef-api">Monero Economic Forum API</a> -- A fully-featured REST API made with the Go Gin web framework</li>
-			<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootsraps Vitejs or Snowpack containerized Preact frontends</li>
+			<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps Vitejs or Snowpack containerized Preact frontends</li>
 			<li><a href="https://github.com/CM-IV/GPACalculator_LinkedList">C++ Linked List GPA Calculator</a> -- A CLI program written in C++ utilizing the Linked List DS</li>
 			<li><a href="https://github.com/CM-IV/Preactjs-landing-starter-template">Preact-Vite-LandingPage</a> -- Landing page template with TS, Bulma CSS, Preact</li>
 			<li><a href="https://adonis-recipe.netlify.app/">Recipe Creation Web App</a> -- Full stack recipe creation web app, Preact and AdonisJS API</li>
