Updated astro to v1.0.0-rc.1, added download page for image optimizer app

--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -21,6 +21,12 @@ const pageTitle = Config.siteTitle;
         <meta property="position" content="1">
       </li>
       <li property="itemListElement" typeof="ListItem">
+        <a href="/downloads" property="item" typeof="WebPage" class="menu-item">
+          <span property="name">Downloads</span>
+        </a>
+        <meta property="position" content="1">
+      </li>
+      <li property="itemListElement" typeof="ListItem">
         <a href="/archive" property="item" typeof="WebPage" class="menu-item">
           <span property="name">Archives</span>
         </a>
