--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,15 +33,17 @@ import Config from "../main.config.cjs";
 		<strong><p>Projects</p></strong>
 		<ul>
 			<li><a href="https://github.com/CM-IV/mef-api">Monero Economic Forum API</a> -- A fully-featured REST API made with the Go Gin web framework</li>
-			<li><a href="https://github.com/CM-IV/ots-turborepo">Full-Stack Turborepo Template</a> -- Template that uses Turborepo to manage a full-stack Preact/Adonisjs web app.</li>
+			<li><a href="https://github.com/CM-IV/ots-turborepo">Preact Turborepo</a> -- Turborepo manages a full-stack Preact/Adonisjs web app template.</li>
 			<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps Vitejs or Snowpack containerized Preact frontends</li>
 			<li><a href="https://github.com/CM-IV/GPACalculator_LinkedList">C++ Linked List GPA Calculator</a> -- A CLI program written in C++ utilizing the Linked List DS</li>
-			<li><a href="https://adonis-recipe.netlify.app/">Recipe Creation Web App</a> -- Full stack recipe creation web app, Preact and AdonisJS API</li>
+			<li><a href="https://github.com/CM-IV/web-image-optimizer">Web Image Optimizer</a> -- An Electronjs desktop app for optimizing photos on the web.</li>
 		</ul>
 		<hr />
 		<strong><p>Education</p></strong>
+		<p>2022 Undergraduate at UA Little Rock, 3.4 GPA</p>
 		<ul>
-			<li><a href={Config.socialMedia.ua_little_rock}>Computer Science, B.S.</a> -- 2022 Undergraduate, UA LittleRock 3.4 GPA</li>
+			<li><a href={Config.socialMedia.ua_little_rock1}>Computer Science, B.S.</a></li>
+			<li><a href={Config.socialMedia.ua_little_rock2}>Mathematics, Minor</a></li>
 		</ul>
 		<hr />
 		<strong><p>Links</p></strong>
