Updated astro to v1.0.0-rc.1, added downloads page.

--- a/src/components/downloadComponent.astro
+++ b/src/components/downloadComponent.astro
@@ -1,5 +1,12 @@
+---
+const request = await fetch("https://api.letsupload.cc/v2/file/ya48be12y0/info");
+const response = await request.json();
+
+const file_url = response.data.file.url.full;
+---
+
 <strong><p>Web Image Optimizer (tar.xz)</p></strong>
 <p>
-    <a href="/web-image-optimizer.tar.xz" download>Download</a>
+    <a href={file_url}>Download</a>
 </p>
 <p>AppImage SHA512: 8798f033620846b67ea2c1ef1add607f9339d8fa7a619aca357b24bb1c17197b5ea3103dfe01caa2d9f2c61d92a9c800d649ba41195f9e2916d956864a58be8c</p>
