Updated app image

--- a/src/components/downloadComponent.astro
+++ b/src/components/downloadComponent.astro
@@ -1,11 +1,14 @@
 ---
-const request = await fetch("https://api.letsupload.cc/v2/file/P7Ifk018ya/info");
+const request = await fetch("https://api.anonfiles.com/v2/file/v9B0p716yd/info");
 const response = await request.json();
 
 const file_url = response.data.file.url.full;
 ---
-<strong><p>Web Image Optimizer (tar.xz)</p></strong>
+<strong><p>Linux Web Image Optimizer v0.1.1</p></strong>
 <p>
-    <a href={file_url}>Download</a>
+    <a href={file_url}>File Download</a>
 </p>
-<p>AppImage SHA512: 07834f03150c43d9f1deeb26e6157783aab6a234ccf7c3e9d4a4a3c7b21fb5909fb41ab17a95e1cc1f81ee0a3c8ef983548ff7ebd13444d551a9af94a03a33a0</p>
+<p>
+    <a href="/256x256.png" download>Icon Download</a>
+</p>
+<p>AppImage SHA512: e603066ef313444c9fcef8c0ebb4659fd0afbb081376af77493fc9517593679c108a6e859ee4ab2c2cae6f1578a958e589aa9fdc54e0ee531e6c1184c602f851</p>
