--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,7 +92,12 @@
   height: auto;
 }
 
-object {
-  width: 100%;
-  height: 800px;
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.flex-container > div {
+  width: 100px;
+  margin: 10px;
 }
