Upgraded to Astro v1.0 Stable! Removed client render directive from astro component.

--- a/src/components/postPreviewList.astro
+++ b/src/components/postPreviewList.astro
@@ -3,4 +3,4 @@ import BlogPostPreview from "./blogPostPreview.astro";
 const { posts } = Astro.props;
 ---
 
-{posts.map(p => <BlogPostPreview post={p} client:visible/>)}
+{posts.map(p => <BlogPostPreview post={p}/>)}
