Changed page title

--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -6,7 +6,7 @@ import Nav from "../components/nav.astro";
 const { pageTitle } = Astro.props;
 ---
 
-<Headers title="Occident Tech"/>
+<Headers title="Dreamland Software"/>
 <main>
     <div class="container">
         <Nav />
