Updated Astro to v1.1.1

--- a/src/layouts/blogPost.astro
+++ b/src/layouts/blogPost.astro
@@ -9,7 +9,7 @@ const {content} = Astro.props;
 const {title, description, pubDate, author} = content;
 ---
 <html lang={ content.lang || 'en' }>
-  <Headers title="OTS Blog Posts" />
+  <Headers title="Blog Posts" />
   <main>
     <div class="container">
       <Nav />
