Updated website titles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Config from "../main.config.cjs";
 <html lang="en">
 	<Layout pageTitle="Chuck (CMIV)">
 		<div>
-			<p>Software Engineer</p>
+			<p>Software Engineer - Web Development and Security</p>
 		</div>
 		<hr />
 		<strong><p>Skills / Tech Stacks</p></strong>
