--- a/src/components/headers.astro
+++ b/src/components/headers.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Landing Page for Occident Tech Software" />
+  <meta name="description" content="Main Website for Oceanus Web Development and Security" />
   <link rel="preload" href="/fonts/jetbrains-mono-v12-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.2/dist/terminal.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
