Removed comments from astro config file, renamed main site config file to mjs ending

--- a/src/components/archiveYears.astro
+++ b/src/components/archiveYears.astro
@@ -1,5 +1,5 @@
 ---
-import Config from "../main.config.cjs";
+import Config from "../main.config.mjs";
 
 
 const allPosts = await Astro.glob("../pages/posts/*.mdx");
