--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/mainLayout.astro";
-import Config from "../main.config.cjs";
+import Config from "../main.config.mjs";
 ---
 <html lang="en">
 	<Layout pageTitle="Chuck (CMIV)">
