--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -3,7 +3,7 @@
 import Layout from "../../layouts/mainLayout.astro";
 import PostPreviewList from '../../components/postPreviewList.astro';
 import Paginator from "../../components/paginator.astro";
-import Config from "../../main.config.cjs";
+import Config from "../../main.config.mjs";
 
 export async function getStaticPaths({ paginate }) {
 
