--- a/src/components/downloadComponent.astro
+++ b/src/components/downloadComponent.astro
@@ -1,5 +1,5 @@
 ---
-import Config from "../main.config.cjs";
+import Config from "../main.config.mjs";
 
 const linuxFileUrl = Config.socialMedia.linuxFileUrl
 const winFileUrl = Config.socialMedia.winFileUrl;
