--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -2,6 +2,7 @@
 import Headers from "../components/headers.astro";
 import Footer from "../components/footer.astro";
 import Nav from "../components/nav.astro";
+import { Modal } from "../components/animated/modal";
 
 const { pageTitle } = Astro.props;
 ---
@@ -15,5 +16,6 @@ const { pageTitle } = Astro.props;
         </div>
         <slot />
         <Footer />
+        <Modal client:load />
     </div>
 </main>
