Fixed the download links

--- a/src/components/downloadComponent.astro
+++ b/src/components/downloadComponent.astro
@@ -17,7 +17,7 @@ const winFileUrl = Config.socialMedia.winFileUrl;
                     <a href="/256x256.png" download>Icon Download</a>
                 </div>
                 <div id="links">
-                    <a href="/linuxChecksum/sha512sum.txt" download>sha512sum</a>
+                    <a href="/linuxChecksum/Linux_amd64.sha512sum" download>sha512sum</a>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@ const winFileUrl = Config.socialMedia.winFileUrl;
                     <a href={winFileUrl}>Installer Download (.exe)</a>
                 </div>
                 <div id="links">
-                    <a href="/winChecksum/sha512sum.txt" download>sha512sum</a>
+                    <a href="/winChecksum/Win_x64.sha512sum" download>sha512sum</a>
                 </div>
             </div>
         </div>
