--- a/src/components/archiveYears.astro
+++ b/src/components/archiveYears.astro
@@ -2,7 +2,7 @@
 import Config from "../main.config.mjs";
 
 
-const allPosts = await Astro.glob("../pages/posts/*.mdx");
+const allPosts = await Astro.glob("../pages/posts/*.md");
 
 let allYears = allPosts
   .filter((f) => f.frontmatter.pubDate != undefined && f.frontmatter.draft != true)
