No longer using umami cookie and solidjs, switched from terminal theme to picoCSS

--- a/src/components/archiveYears.astro
+++ b/src/components/archiveYears.astro
@@ -12,21 +12,23 @@ let allYearsUnique = [...new Set(allYears.flat())];
 
 const { currentYear } = Astro.props;
 ---
-<form>
-    <fieldset>
-        <legend>Archive Year Selection</legend>
-        <div>
-            <select class="select" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-                {currentYear?.toString()=="" 
-                    ? <option disabled selected>{Config.i18n.archive.select}</option>
-                    : <option disabled>{Config.i18n.archive.select}</option>}
-                {allYearsUnique.map((year) =>
-                    currentYear?.toString() == year 
-                        ? <option selected>{year}</option>
-                        : <option value={`/archive/${year}`}>{year}</option>
-                    
-                )}
-            </select>
-        </div>
-    </fieldset>
-</form>
+<article>
+    <form>
+        <fieldset>
+            <legend>Archive Year Selection</legend>
+            <div>
+                <select class="select" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
+                    {currentYear?.toString()=="" 
+                        ? <option disabled selected>{Config.i18n.archive.select}</option>
+                        : <option disabled>{Config.i18n.archive.select}</option>}
+                    {allYearsUnique.map((year) =>
+                        currentYear?.toString() == year 
+                            ? <option selected>{year}</option>
+                            : <option value={`/archive/${year}`}>{year}</option>
+                        
+                    )}
+                </select>
+            </div>
+        </fieldset>
+    </form>
+</article>
