--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,7 +2,9 @@
 import Config from "../main.config.mjs";
 ---
 
-<section class="centered-section">
+<hr />
+
+<footer class="container">
     <p>{Config.footer}</p>
     <p>Made with <a href="https://astro.build">Astro</a>.</p>
-</section>
+</footer>
