--- a/src/layouts/blogPost.astro
+++ b/src/layouts/blogPost.astro
@@ -3,22 +3,20 @@ import BlogPost from '../components/blogInfo.astro';
 import Headers from "../components/headers.astro";
 import Nav from "../components/nav.astro";
 import Footer from "../components/footer.astro";
-import { Modal } from "../components/animated/modal";
-
 
 const {content} = Astro.props;
 const {title, description, pubDate, author} = content;
 ---
-<html lang={ content.lang || 'en' }>
+<html lang={ content.lang || 'en' } data-theme="dark">
   <Headers title="Blog Posts" />
-  <main>
+  
     <div class="container">
       <Nav />
       <BlogPost title={title} description={description} author={author} pubDate={pubDate}>
-        <slot />
+        <main>
+          <slot />
+        </main>
       </BlogPost>
       <Footer />
-      <Modal client:load />
     </div>
-  </main>
 </html>
