--- a/src/components/downloadComponent.astro
+++ b/src/components/downloadComponent.astro
@@ -4,33 +4,29 @@ import Config from "../main.config.mjs";
 const linuxFileUrl = Config.socialMedia.linuxFileUrl
 const winFileUrl = Config.socialMedia.winFileUrl;
 ---
-<section>
-    <strong><p>Web Image Optimizer</p></strong>
-    <div class="flex-container">
+<article>
+    <header>Web Image Optimizer</header>
+    <div class="grid">
         <div>
-            <div class="terminal-card">
-                <header>Linux</header>
-                <div id="links">
-                    <a  href={linuxFileUrl}>AppImage Download</a>
-                </div>
-                <div id="links">
-                    <a href="/256x256.png" download>Icon Download</a>
-                </div>
-                <div id="links">
-                    <a href="/linuxChecksum/Linux_amd64.sha512sum" download>sha512sum</a>
-                </div>
+            <header>Linux</header>
+            <div id="links">
+                <a  href={linuxFileUrl}>AppImage Download</a>
+            </div>
+            <div id="links">
+                <a href="/256x256.png" download>Icon Download</a>
+            </div>
+            <div id="links">
+                <a href="/linuxChecksum/Linux_amd64.sha512sum" download>sha512sum</a>
             </div>
         </div>
         <div>
-            <div class="terminal-card">
-                <header>Windows</header>
-                <div id="links">
-                    <a href={winFileUrl}>Installer Download (.exe)</a>
-                </div>
-                <div id="links">
-                    <a href="/winChecksum/Win_x64.sha512sum" download>sha512sum</a>
-                </div>
+            <header>Windows</header>
+            <div id="links">
+                <a href={winFileUrl}>Installer Download (.exe)</a>
+            </div>
+            <div id="links">
+                <a href="/winChecksum/Win_x64.sha512sum" download>sha512sum</a>
             </div>
         </div>
     </div>
-</section>
+</article>
