--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
+@import "./pico.min.css";
+
 * {
   box-sizing: border-box;
 }
@@ -62,61 +64,13 @@
 
 /* FONTS END */
 
-
-:root {
-    --global-font-size: 15px;
-    --global-line-height: 1.4em;
-    --global-space: 10px;
-    --font-stack: 'JetBrains Mono';
-    --background-color: #222225;
-    --page-width: 60em;
-    --font-color: #ffffff;
-    --invert-font-color: #222225;
-    --secondary-color: #a3abba;
-    --tertiary-color: #a3abba;
-    --primary-color: #15ff00;
-    --error-color: #ff3c74;
-    --progress-bar-background: #3f3f44;
-    --progress-bar-fill: #62c4ff;
-    --code-bg-color: #3f3f44;
-    --input-style: solid;
-    --display-h1-decoration: none;
-}
-
-.centered-section {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 400px;
-    padding: 100px;
+#brand {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .image {
   width: 100%;
   height: auto;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.flex-container > div {
-  width: 100px;
-  margin: 10px;
-}
-
-#links {
-  padding: 8px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-}
-
-.terminal-alert {
-  position: fixed;       
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%);
-  background-color: #222225;
 }
