--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -11,7 +11,7 @@ const pageTitle = Config.siteTitle;
     </li>
   </ul>
   <details role="list">
-    <summary aria-haspopup="listbox" role="button">Links</summary>
+    <summary aria-haspopup="listbox" role="button">Nav</summary>
     <ul role="listbox">
       <li property="itemListElement" typeof="ListItem">
         <a href="/news" property="item" typeof="WebPage" class="menu-item">
