--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,17 +22,17 @@ import Config from "../main.config.mjs";
 	<ul>
 		<li>GitHub Actions</li>
 		<li>CircleCI</li>
-		<li>WoodpeckerCI (A fork of DroneCI)</li>
+		<li>WoodpeckerCI (A self-hosted fork of DroneCI)</li>
 		<li>Self-hosted Kubernetes K3s workloads using Portainer (Docker)</li>
 	</ul>
 	<hr />
 	<strong><p>Projects</p></strong>
 	<ul>
+		<li><a href="https://github.com/CM-IV/gossip-gobbler-web">Gossip Gobbler</a> -- An automated static website scraper with integrated drive storage, Adonisjs web application</li>
 		<li><a href="https://github.com/CM-IV/astro-fast-dash">Astro Fast Dash</a> -- A homelab dashboard made with Astro SSR</li>
-		<li><a href="https://github.com/CM-IV/mef-api">Monero Economic Forum API</a> -- A fully-featured REST API made with the Go Gin web framework</li>
 		<li><a href="https://github.com/CM-IV/Basedbin">Basedbin</a> -- A Pastebin alternative, made with RakkasJS.</li>
-		<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps Vitejs or Snowpack containerized Preact frontends</li>
-		<li><a href="https://github.com/CM-IV/GPACalculator_LinkedList">C++ Linked List GPA Calculator</a> -- A CLI program written in C++ utilizing the Linked List DS</li>
+		<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps Vitejs-built Preact frontends</li>
+		<li><a href="https://github.com/CM-IV/Zat">Zat</a> -- A simple <i>cat</i> replacement written in Rust utilizing the Vector Data Structure</li>
 		<li><a href="https://github.com/CM-IV/web-image-optimizer">Web Image Optimizer</a> -- An Electronjs desktop app for optimizing photos on the web.</li>
 	</ul>
 	<hr />
