--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,9 +2,8 @@
 import Config from "../main.config.mjs";
 ---
 
-<hr />
-
 <footer class="container">
     <p>{Config.footer}</p>
     <p>Made with <a href="https://astro.build">Astro</a>.</p>
+    <p>Styled with <a href="https://simplecss.org/">simplecss</a>.</p>
 </footer>
