--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,72 +1,18 @@
 ---
 import Config from "../main.config.mjs";
+import NavLink from "./navLink.astro";
 
 const pageTitle = Config.siteTitle;
 ---
 
-<nav>
-  <ul>
-    <li>
-      <a href="/" id="brand">{pageTitle}</a>
-    </li>
-  </ul>
-  <details role="list">
-    <summary aria-haspopup="listbox" role="button">Nav</summary>
-    <ul role="listbox">
-      <li property="itemListElement" typeof="ListItem">
-        <a href="/news" property="item" typeof="WebPage" class="menu-item">
-          <span property="name">Posts</span>
-        </a>
-        <meta property="position" content="1">
-      </li>
-      <li property="itemListElement" typeof="ListItem">
-        <a href="/downloads" property="item" typeof="WebPage" class="menu-item">
-          <span property="name">Downloads</span>
-        </a>
-        <meta property="position" content="2">
-      </li>
-      <li property="itemListElement" typeof="ListItem">
-        <a href="/archive" property="item" typeof="WebPage" class="menu-item">
-          <span property="name">Archives</span>
-        </a>
-        <meta property="position" content="3">
-      </li>
-      <li property="itemListElement" typeof="ListItem">
-        <a href="/news/rss.xml" property="item" typeof="WebPage" class="menu-item">
-          <span property="name">Feed</span>
-        </a>
-        <meta property="position" content="4">
-      </li>
-    </ul>
-  </details>
-  <ul vocab="https://schema.org/" typeof="BreadcrumbList" id="hamitems">
-    <li property="itemListElement" typeof="ListItem">
-      <a href="/news" property="item" typeof="WebPage" class="menu-item">
-        <span property="name">Posts</span>
-      </a>
-      <meta property="position" content="1">
-    </li>
-    <li property="itemListElement" typeof="ListItem">
-      <a href="/downloads" property="item" typeof="WebPage" class="menu-item">
-        <span property="name">Downloads</span>
-      </a>
-      <meta property="position" content="2">
-    </li>
-    <li property="itemListElement" typeof="ListItem">
-      <a href="/archive" property="item" typeof="WebPage" class="menu-item">
-        <span property="name">Archives</span>
-      </a>
-      <meta property="position" content="3">
-    </li>
-    <li property="itemListElement" typeof="ListItem">
-      <a href="/news/rss.xml" property="item" typeof="WebPage" class="menu-item">
-        <span property="name">Feed</span>
-      </a>
-      <meta property="position" content="4">
-    </li>
-  </ul>
-</nav>
-
-<hr />
-
-<br />
+<header>
+  <nav>
+    <NavLink href="/">Home</NavLink>
+    <NavLink href="/news">Blog</NavLink>
+    <NavLink href="/downloads">Downloads</NavLink>
+    <NavLink href="/archive">Archives</NavLink>
+    <NavLink href="/news/rss.xml">RSS</NavLink>
+  </nav>
+  <h2>{pageTitle}</h2>
+  <p>Software Engineer & Web Developer for <a href="#hireme">hire</a></p>
+</header>
