--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,9 @@ import Config from "../main.config.mjs";
 
 ---
 <Layout pageTitle="Unique Digital Stories for your Customers">
-	<p>Software Engineer & Web Developer for <a href="#hireme">hire</a></p>
-
 	<p>TypeScript Web Development</p>
 	<ul>
-		<li>Astro web framework, lighting fast websites - minimal JavaScript</li>
+		<li>Astrojs web framework, lighting fast websites - minimal JavaScript</li>
 		<li>NextJS (React) or Preact web applications</li>
 		<li>AdonisJS, NestJS, or Go (Gin) for web APIs</li>
 	</ul>
@@ -16,8 +14,8 @@ import Config from "../main.config.mjs";
 	<ul>
 		<li>PostgreSQL</li>
 		<li>Supabase (PostgreSQL)</li>
+		<li>MySQL</li>
 		<li>Detabase (NoSQL)</li>
-		<li>MongoDB (NoSQL)</li>
 	</ul>
 	<p>DevOps & CI/CD Experience</p>
 	<ul>
@@ -32,7 +30,7 @@ import Config from "../main.config.mjs";
 		<li><a href="https://github.com/CM-IV/gossip-gobbler-web">Gossip Gobbler</a> -- An automated static website scraper with integrated drive storage, Adonisjs web application</li>
 		<li><a href="https://github.com/CM-IV/astro-fast-dash">Astro Fast Dash</a> -- A homelab dashboard made with Astro SSR</li>
 		<li><a href="https://github.com/CM-IV/Basedbin">Basedbin</a> -- A Pastebin alternative, made with RakkasJS</li>
-		<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps Vitejs-built Preact frontends</li>
+		<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps frontends for web applications</li>
 		<li><a href="https://github.com/CM-IV/Zat">Zat</a> -- A simple <i>cat</i> replacement written in Rust utilizing the Vector Data Structure</li>
 		<li><a href="https://github.com/CM-IV/web-image-optimizer">Web Image Optimizer</a> -- An Electronjs desktop app for optimizing photos on the web</li>
 	</ul>
