Updated astro to v 2.0

--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -14,5 +14,5 @@ const pageTitle = Config.siteTitle;
     <NavLink href="/news/rss.xml">RSS</NavLink>
   </nav>
   <h2>{pageTitle}</h2>
-  <p>Software Engineer & Web Developer for <a href="#hireme">hire</a></p>
+  <p>Software Engineer & Web Developer for <a href="/#hireme">hire</a></p>
 </header>
