--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -7,7 +7,7 @@ import Config from "../../main.config.mjs";
 
 export async function getStaticPaths({ paginate }) {
 
-  const allPosts = await Astro.glob('../posts/*.md');
+  const allPosts = await Astro.glob('../posts/*.{md,mdx}');
 
   const sortedPosts = allPosts.filter(f => f.frontmatter.draft != true).sort((a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf());
 
