--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -10,3 +10,9 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
 	<slot />
 </a>
+<style>
+	a.active {
+		color: var(--accent) !important;
+		border-color: var(--accent) !important;
+	}
+</style>
