--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,6 @@ import Config from '../consts';
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/downloads">Downloads</HeaderLink>
-		<HeaderLink href="rss.xml">RSS</HeaderLink>
+		<HeaderLink href="/rss.xml">RSS</HeaderLink>
 	  </nav>
 </header>
