--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,6 +18,8 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/x-icon" href="https://ik.imagekit.io/xbkhabiqcy9/img/favicon_DuXwGy1V-.png?ik-sdk-version=javascript-1.4.3&updatedAt=1638746946810" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
+            integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
