--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,6 +29,7 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="view-transition" content="same-origin" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
