Added photography section, added pagination for blog posts.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@ import Config from '../consts';
 	<nav>
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
+		<HeaderLink href="/photos">Photography</HeaderLink>
 		<HeaderLink href="/downloads">Downloads</HeaderLink>
 		<HeaderLink href="/rss.xml">RSS</HeaderLink>
 	  </nav>
