--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -4,13 +4,16 @@ import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import Config from '../../consts';
 import { getCollection, CollectionEntry } from 'astro:content';
+import Paginator from '../../components/Paginator.astro';
 
-const posts = await getCollection('blog', ({ data }) => {
-		return data.draft !== true;
-});
+export async function getStaticPaths({ paginate }: any) {
+	const posts = await getCollection("blog");
 
-const orderedPosts: CollectionEntry<'blog'>[] = posts.sort((a, b) => new Date(b.data.pubDate).valueOf() - new Date(a.data.pubDate).valueOf());
+	const orderedPosts: CollectionEntry<'blog'>[] = posts.sort((a, b) => new Date(b.data.pubDate).valueOf() - new Date(a.data.pubDate).valueOf());
 
+	return paginate(orderedPosts, { pageSize: 8 });
+}
+const { page } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -24,7 +27,7 @@ const orderedPosts: CollectionEntry<'blog'>[] = posts.sort((a, b) => new Date(b.
 			<section>
 				<ul>
 					{
-						orderedPosts.map((post) => (
+						page.data.map((post: any) => (
 							<li>
 								<time datetime={post.data.pubDate.toISOString()}>
 									{post.data.pubDate.toLocaleDateString('en-us', {
@@ -38,6 +41,7 @@ const orderedPosts: CollectionEntry<'blog'>[] = posts.sort((a, b) => new Date(b.
 						))
 					}
 				</ul>
+				<Paginator page={page} />
 			</section>
 		</main>
 		<Footer />
