Changed project highlights

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Config from '../consts';
 			<ul>
 				<li><a href="https://github.com/CM-IV/gossip-gobbler-web">Gossip Gobbler</a> -- An automated static website scraper with integrated drive storage, Adonisjs web application</li>
 				<li><a href="https://github.com/CM-IV/astro-fast-dash">Astro Fast Dash</a> -- A homelab dashboard made with Astro SSR</li>
-				<li><a href="https://github.com/CM-IV/Basedbin">Basedbin</a> -- A Pastebin alternative, made with RakkasJS</li>
+				<li><a href="https://github.com/CM-IV/rs-calc">RS-Calc</a> -- A terminal calculator written in Rust capable of linear algebra operations</li>
 				<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps frontends for web applications</li>
 				<li><a href="https://github.com/CM-IV/Zat">Zat</a> -- A simple <i>cat</i> replacement written in Rust utilizing the Vector Data Structure</li>
 				<li><a href="https://github.com/CM-IV/web-image-optimizer">Web Image Optimizer</a> -- An Electronjs desktop app for optimizing photos on the web</li>
